--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.servlet.context-path=/users
 server.port=8081
 spring.main.allow-circular-references=true
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=i.ferjani.26@gmail.com
-spring.mail.password=mvnj hyzo wrhb icaw
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
